PJ-2008-02-29-0: Bugfix:   Row Limit in ARCo Simple Query builder cannot be empty
                 Bugster:  6661461
                 Review:   JO

PJ-2008-02-28-0: Bugfix:   Sort order and row limit cannot be specified together in ARCo Simple Query builder
                 Bugster:  6661470
                 Review:   JO

JO-2008-02-28-0: Enhancem.: Enhanced reporting test SQLGeneratotTest
                 Review:    PJ

JO-2008-02-27-0: Bugfix:   Fixed commit JO-2008-02-22-0 to work with arcorun
                 Review:   PJ

JO-2008-02-22-0: Bugfix:   In SJWC on Oracle dates appear truncated to just MM/DD/YYYY
                 Bugster:  6661500
                 Issue:    2503
                 Review:   AP

AP-2008-02-20-0: Bugfix:   ARCo reporting module installation script is broken 
                           on Red Hat Enterprise Linux 4 Update 4
                 Bugster:  6663741
                 Issue:    2498
                 Review:   JG

JO-2008-02-15-0: Bugfix:   Batch failure on Oracle database.
                 Bugster:  6659300
                 Review:   PJ

JO-2008-02-11-0: Bugfix:    Queries Average Job Turnaround Time and Average Job Wait Time irresponsive on MySQL
                 Bugster:   6661473
                 Review:    AP

AP-2008-02-06-0: Bugfix:    Correct the field name in dbwriter.xml for mysql 
                            to ju_exit_status

RD-2008-02-04-0: CVS:       Created V62alpha1_TAG
-------------------------------------------------

LP-2008-02-01-0: Cleanup:   Cleanup to use new GetCell functionality (detection)
                 Review:    PJ

JO-2008-02-01-0: Cleanup:  o got rid of 5.3 specific code
                           o got rid of word Please in prompts
                           o changes for consistency
                           o other minor cosmetic changes
                 Review:   PJ    

PJ-2008-01-31-0: Bugfix:    ORDER BY clause ignored in Advanced Query
                 Bugster:   6598005 