@@ -140,8 +140,8 @@ query.common.viewTable.data = Data
 query.common.viewTable.Type = Type
 query.common.viewTable.PivotType = Pivot Type
 query.common.view.removeGraphic = Remove Graphic
-query.simple.filter.firstLogicalConnectionIgnored=The first logical connection off the first filter is ignored ({0})
-query.simple.filter.invalidLogicalConnection=Field {0} must have a logical connection (AND/OR)
+query.simple.filter.firstLogicalConnectionIgnored=The logical connection ({2}) is ignored for first active filter (field name: {0}) on row {1} 
+query.simple.filter.invalidLogicalConnection=The field {0} must have a logical connection (AND/OR) on row {1} 
 query.simple.filter.parameterRequired=Filter for field {0} requires 1 parameter
 query.simple.filter.parametersRequired=Filter for field {0} requires {1} parameters
 
